build: ng add @ionic/angular --project customer-mobile

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "8.2.7",
     "@angular/platform-browser-dynamic": "8.2.7",
     "@angular/router": "8.2.7",
+    "@ionic/angular": "^4.9.1",
     "@nrwl/angular": "8.5.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.3",
@@ -47,6 +48,7 @@
     "@angular/cli": "8.3.5",
     "@angular/compiler-cli": "8.2.7",
     "@angular/language-service": "8.2.7",
+    "@ionic/angular-toolkit": "latest",
     "@nrwl/cypress": "8.5.1",
     "@nrwl/jest": "8.5.1",
     "@nrwl/workspace": "8.5.1",
