build: ionic integrations enable capacitor

--- a/apps/customer/mobile/capacitor.config.json
+++ b/apps/customer/mobile/capacitor.config.json
@@ -1,3 +1,6 @@
 {
-  "npmClient": "yarn"
+  "appId": "co.matheo.customer",
+  "appName": "Customer App",
+  "npmClient": "yarn",
+  "webDir": "www"
 }
