build: ionic integrations enable cordova

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,7 +7,8 @@
       "root": "apps/customer/mobile",
       "type": "angular",
       "integrations": {
-        "capacitor": {}
+        "capacitor": {},
+        "cordova": {}
       }
     }
   }
