--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
+    "customer:mobile:plugin": "cd apps/customer/mobile && yarn plugin",
+    "customer:mobile:cap": "cd apps/customer/mobile && yarn cap",
+    "customer:mobile:run": "ionic capacitor run -l --consolelogs --address 0.0.0.0 --project customer-mobile",
+    "customer:mobile:serve": "ionic serve --consolelogs --address 0.0.0.0 --project customer-mobile",
+    "customer:mobile:sync": "cd apps/customer/mobile && rimraf node_modules && yarn && yarn cap:sync",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
