build: yarn customer:mobile:cap add android

--- a/apps/customer/mobile/package.json
+++ b/apps/customer/mobile/package.json
@@ -12,6 +12,7 @@
     "cap:update": "npx cap update"
   },
   "dependencies": {
+    "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1"
   },
   "devDependencies": {
