fix: android studio path to be able to open from capacitor

--- a/apps/customer/mobile/capacitor.config.json
+++ b/apps/customer/mobile/capacitor.config.json
@@ -2,5 +2,6 @@
   "appId": "co.matheo.customer",
   "appName": "Customer App",
   "npmClient": "yarn",
-  "webDir": "www"
+  "webDir": "www",
+  "linuxAndroidStudioPath": "/snap/android-studio/current/android-studio/bin/studio.sh"
 }
