--- a/package.json
+++ b/package.json
@@ -34,25 +34,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.7",
-    "@angular/common": "8.2.7",
-    "@angular/compiler": "8.2.7",
-    "@angular/core": "8.2.7",
-    "@angular/forms": "8.2.7",
-    "@angular/platform-browser": "8.2.7",
-    "@angular/platform-browser-dynamic": "8.2.7",
-    "@angular/router": "8.2.7",
+    "@angular/animations": "9.1.3",
+    "@angular/common": "9.1.3",
+    "@angular/compiler": "9.1.3",
+    "@angular/core": "9.1.3",
+    "@angular/forms": "9.1.3",
+    "@angular/platform-browser": "9.1.3",
+    "@angular/platform-browser-dynamic": "9.1.3",
+    "@angular/router": "9.1.3",
     "@ionic/angular": "^4.9.1",
     "@nrwl/angular": "8.5.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.3",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.5",
-    "@angular/cli": "8.3.5",
-    "@angular/compiler-cli": "8.2.7",
-    "@angular/language-service": "8.2.7",
+    "@angular-devkit/build-angular": "0.901.3",
+    "@angular/cli": "9.1.3",
+    "@angular/compiler-cli": "9.1.3",
+    "@angular/language-service": "9.1.3",
     "@ionic/angular-toolkit": "latest",
     "@nrwl/cypress": "8.5.1",
     "@nrwl/jest": "8.5.1",
@@ -69,6 +70,6 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
