--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/platform-browser-dynamic": "9.1.3",
     "@angular/router": "9.1.3",
     "@ionic/angular": "^4.9.1",
-    "@nrwl/angular": "8.5.1",
+    "@nrwl/angular": "9.2.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
@@ -55,21 +55,21 @@
     "@angular/compiler-cli": "9.1.3",
     "@angular/language-service": "9.1.3",
     "@ionic/angular-toolkit": "latest",
-    "@nrwl/cypress": "8.5.1",
-    "@nrwl/jest": "8.5.1",
-    "@nrwl/workspace": "8.5.1",
+    "@nrwl/cypress": "9.2.3",
+    "@nrwl/jest": "9.2.3",
+    "@nrwl/workspace": "9.2.3",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
-    "eslint": "6.1.0",
+    "eslint": "6.8.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
-    "prettier": "1.18.2",
+    "prettier": "1.19.1",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "6.0.0",
     "typescript": "~3.8.3"
   }
 }
