--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@angular/platform-browser": "9.1.3",
     "@angular/platform-browser-dynamic": "9.1.3",
     "@angular/router": "9.1.3",
-    "@ionic/angular": "^4.9.1",
+    "@ionic/angular": "^5.0.7",
     "@nrwl/angular": "9.2.3",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.5",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.3"
@@ -60,16 +60,16 @@
     "@nrwl/workspace": "9.2.3",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "~5.2.2",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "jest": "24.1.0",
-    "jest-preset-angular": "7.0.0",
+    "jest-preset-angular": "8.1.3",
     "prettier": "1.19.1",
     "ts-jest": "24.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "6.0.0",
+    "ts-node": "~8.9.1",
+    "tslint": "~6.1.2",
     "typescript": "~3.8.3"
   }
 }
