--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -176,34 +175,44 @@
             "styles": [
               "apps/customer/mobile/src/styles.scss",
               {
-                "input": "node_modules/@ionic/angular/css/normalize.css"
+                "input": "node_modules/@ionic/angular/css/normalize.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/structure.css"
+                "input": "node_modules/@ionic/angular/css/structure.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/typography.css"
+                "input": "node_modules/@ionic/angular/css/typography.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/core.css"
+                "input": "node_modules/@ionic/angular/css/core.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/padding.css"
+                "input": "node_modules/@ionic/angular/css/padding.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/float-elements.css"
+                "input": "node_modules/@ionic/angular/css/float-elements.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/text-alignment.css"
+                "input": "node_modules/@ionic/angular/css/text-alignment.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/text-transformation.css"
+                "input": "node_modules/@ionic/angular/css/text-transformation.css",
+                "inject": true
               },
               {
-                "input": "node_modules/@ionic/angular/css/flex-utils.css"
+                "input": "node_modules/@ionic/angular/css/flex-utils.css",
+                "inject": true
               },
               {
-                "input": "apps/customer/mobile/src/theme/variables.scss"
+                "input": "apps/customer/mobile/src/theme/variables.scss",
+                "inject": true
               }
             ],
             "scripts": []
@@ -219,7 +228,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
