--- a/package.json
+++ b/package.json
@@ -34,33 +34,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.3",
-    "@angular/common": "9.1.3",
-    "@angular/compiler": "9.1.3",
-    "@angular/core": "9.1.3",
-    "@angular/forms": "9.1.3",
-    "@angular/platform-browser": "9.1.3",
-    "@angular/platform-browser-dynamic": "9.1.3",
-    "@angular/router": "9.1.3",
+    "@angular/animations": "11.2.4",
+    "@angular/common": "11.2.4",
+    "@angular/compiler": "11.2.4",
+    "@angular/core": "11.2.4",
+    "@angular/forms": "11.2.4",
+    "@angular/platform-browser": "11.2.4",
+    "@angular/platform-browser-dynamic": "11.2.4",
+    "@angular/router": "11.2.4",
     "@ionic/angular": "^5.0.7",
     "@nrwl/angular": "9.2.3",
     "core-js": "^3.6.5",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.10.0",
+    "rxjs": "6.6.3",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.3",
-    "@angular/cli": "9.1.3",
-    "@angular/compiler-cli": "9.1.3",
-    "@angular/language-service": "9.1.3",
+    "@angular-devkit/build-angular": "0.1102.3",
+    "@angular/cli": "11.2.3",
+    "@angular/compiler-cli": "11.2.4",
+    "@angular/language-service": "11.2.4",
     "@ionic/angular-toolkit": "latest",
     "@nrwl/cypress": "9.2.3",
     "@nrwl/jest": "9.2.3",
     "@nrwl/workspace": "9.2.3",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
-    "codelyzer": "~5.2.2",
+    "codelyzer": "^6.0.0",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
@@ -69,7 +69,7 @@
     "prettier": "1.19.1",
     "ts-jest": "24.0.0",
     "ts-node": "~8.9.1",
-    "tslint": "~6.1.2",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "4.1.5"
   }
 }
