--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
+    "ng": "nx",
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
@@ -26,11 +26,11 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
-    "update:check": "ng update",
+    "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "node ./decorate-angular-cli.js"
   },
   "private": true,
   "dependencies": {
@@ -43,7 +43,7 @@
     "@angular/platform-browser-dynamic": "11.2.4",
     "@angular/router": "11.2.4",
     "@ionic/angular": "^5.0.7",
-    "@nrwl/angular": "9.2.3",
+    "@nrwl/angular": "11.4.0",
     "core-js": "^3.6.5",
     "rxjs": "6.6.3",
     "tslib": "^2.0.0",
@@ -55,19 +55,22 @@
     "@angular/compiler-cli": "11.2.4",
     "@angular/language-service": "11.2.4",
     "@ionic/angular-toolkit": "latest",
-    "@nrwl/cypress": "9.2.3",
-    "@nrwl/jest": "9.2.3",
-    "@nrwl/workspace": "9.2.3",
-    "@types/jest": "24.0.9",
-    "@types/node": "~8.9.4",
+    "@nrwl/cli": "11.4.0",
+    "@nrwl/cypress": "11.4.0",
+    "@nrwl/jest": "11.4.0",
+    "@nrwl/tao": "11.4.0",
+    "@nrwl/workspace": "11.4.0",
+    "@types/jest": "26.0.8",
+    "@types/node": "12.12.38",
     "codelyzer": "^6.0.0",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
-    "jest": "24.1.0",
-    "jest-preset-angular": "8.1.3",
-    "prettier": "1.19.1",
-    "ts-jest": "24.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.2.1",
+    "prettier": "2.2.1",
+    "ts-jest": "26.4.0",
     "ts-node": "~8.9.1",
     "tslint": "~6.1.0",
     "typescript": "4.1.5"
