--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@angular/platform-browser": "11.2.4",
     "@angular/platform-browser-dynamic": "11.2.4",
     "@angular/router": "11.2.4",
-    "@ionic/angular": "^5.0.7",
+    "@ionic/angular": "^5.6.0",
     "@nrwl/angular": "11.4.0",
     "core-js": "^3.6.5",
     "rxjs": "6.6.3",
@@ -54,7 +54,7 @@
     "@angular/cli": "11.2.3",
     "@angular/compiler-cli": "11.2.4",
     "@angular/language-service": "11.2.4",
-    "@ionic/angular-toolkit": "latest",
+    "@ionic/angular-toolkit": "^3.1.0",
     "@nrwl/cli": "11.4.0",
     "@nrwl/cypress": "11.4.0",
     "@nrwl/jest": "11.4.0",
