--- a/nx.json
+++ b/nx.json
@@ -21,6 +21,9 @@
     },
     "customer-mobile": {
       "tags": ["mobile"]
+    },
+    "theme": {
+      "tags": ["ui"]
     }
   },
   "tasksRunnerOptions": {
