--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "defaultProject": "customer-mobile",
+  "defaultProject": "website",
   "projects": {
     "website": {
       "projectType": "application",
@@ -23,11 +23,15 @@
             "tsConfig": "apps/website/tsconfig.app.json",
             "aot": false,
             "assets": [
-              "apps/website/src/favicon.ico",
-              "apps/website/src/assets"
+              "apps/website/src/assets",
+              {
+                "glob": "**/*",
+                "input": "libs/theme/assets/favicons/",
+                "output": ""
+              }
             ],
             "styles": [
-              "apps/website/src/styles.scss"
+              "libs/theme/styles/styles.scss"
             ],
             "scripts": []
           },
